2007-08-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.pmt (igraph_vector_fill) : added
	* examples/simple/vector.c : fill check added

2007-08-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_betweenness) : 
	bug fixed when 'vids' is not all vertices, thanks to Alex Gutteridge

2007-08-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_lcf, igraph_lcf_vector) : added

2007-08-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_famous): some more graphs added

	* src/structure_generators.c (igraph_famous): corrected some names

2007-08-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2, igraph_isomorphic_function_vf2)
	(igraph_count_isomorphisms_vf2, igraph_get_isomorphisms_vf2)
	(igraph_subisomorphic_function_vf2, igraph_subisomorphic_vf2)
	(igraph_count_subisomorphisms_vf2, igraph_get_subisomorphisms_vf2) :
	added, reorganized

2007-08-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_famous) : added

2007-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : check directedness,
	check number of vertices, fix +1 bug for map12 and map21

	* src/vector.pmt (igraph_vector_add) : stupid bug corrected

	* src/vector.pmt (igraph_vector_add) : added

2007-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic_vf2) : added 'map12' and 'map21' 
	arguments

2007-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_graphopt) : added

2007-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_grid.c (igraph_2dgrid_which, igraph_2dgrid_dist)
	(igraph_2dgrid_dist2, igraph_2dgrid_next_nei)
	(igraph_i_layout_mergegrid_which) : removed inline

2007-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_count_multiple) : bug corrected

	* src/structural_properties.c (igraph_is_multiple, igraph_is_loop) :